--- a/csharp/2-intermediate/api/DMS/DMS.UI/MainWindow.xaml
+++ b/csharp/2-intermediate/api/DMS/DMS.UI/MainWindow.xaml
@@ -3,10 +3,28 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:DMS.UI"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="MainWindow" 
+        Height="450" 
+        Width="800">
     <Grid>
-        
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="50*" />
+            <ColumnDefinition Width="50*" />
+        </Grid.ColumnDefinitions>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="20*" />
+            <RowDefinition Height="20*" />
+        </Grid.RowDefinitions>
+
+        <Button Click="OpenWindow_Click">Abrir ventana</Button>
+        <Button Grid.Column="1" Click="OpenDataGrid_Click">Abrir data grid</Button>
+
+        <Button Grid.Row="1" Click="OpenListView_Click">
+            Abrir list view
+        </Button>
+        <Button Grid.Row="1" Grid.Column="1" Click="OpenDataTemplate_Click">
+            Abrir data template
+        </Button>
     </Grid>
 </Window>
